Catalog: Filtr All

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -116,7 +116,7 @@
         </div>
       </div>
 
-      <section class="filter-country filter-country--opened">
+      <section class="filter-country filter-country--closed page-main--nojs">
         <div class="container">
           <div class="filter-country__top">
             <h2 class="filter-country__title">Фильтрация по странам:</h2>
@@ -208,7 +208,7 @@
                   <a class="alphabet__country-link" href="#">Бельгия</a>
                 </li>
                 <li class="alphabet__country">
-                  <a class="alphabet__country-link" href="#">Бельгия</a>
+                  <a class="alphabet__country-link" href="#">Бенин</a>
                 </li>
                 <li class="alphabet__country">
                   <a class="alphabet__country-link" href="#">Болгария</a>
@@ -486,9 +486,6 @@
                 <li class="alphabet__country">
                   <a class="alphabet__country-link" href="#">Марокко</a>
                 </li>
-                <li class="alphabet__country">
-                  <a class="alphabet__country-link" href="#">Мексика</a>
-                </li>
               </ul>
             </li>
 
@@ -582,7 +579,7 @@
               </ul>
             </li>
 
-            <li class="alphabet__item">
+            <li class="alphabet__item alphabet__item--max">
               <button class="alphabet__letter" type="button">С</button>
               <ul class="alphabet__group-country alphabet__group-country--desktop">
                 <li class="alphabet__country">
@@ -624,7 +621,7 @@
               </ul>
             </li>
 
-            <li class="alphabet__item">
+            <li class="alphabet__item alphabet__item--max">
               <button class="alphabet__letter" type="button">Т</button>
               <ul class="alphabet__group-country alphabet__group-country--desktop">
                 <li class="alphabet__country">
@@ -660,7 +657,7 @@
               </ul>
             </li>
 
-            <li class="alphabet__item">
+            <li class="alphabet__item alphabet__item--max">
               <button class="alphabet__letter" type="button">У</button>
               <ul class="alphabet__group-country alphabet__group-country--desktop">
                 <li class="alphabet__country">
@@ -678,7 +675,7 @@
               </ul>
             </li>
 
-            <li class="alphabet__item">
+            <li class="alphabet__item alphabet__item--max">
               <button class="alphabet__letter" type="button">Ф</button>
               <ul class="alphabet__group-country alphabet__group-country--desktop">
                 <li class="alphabet__country">
@@ -696,7 +693,7 @@
               </ul>
             </li>
 
-            <li class="alphabet__item">
+            <li class="alphabet__item alphabet__item--max">
               <button class="alphabet__letter" type="button">Х</button>
               <ul class="alphabet__group-country alphabet__group-country--desktop">
                 <li class="alphabet__country">
@@ -822,10 +819,12 @@
           </ul>
   
           <button class="filter-country__unwrap filter-country__unwrap--hidden button button--country">Свернуть</button>
-
         </div>
-
       </section>
+
+      <section>
+      </section>
+
   
 
 
