Catalog: Filtr JS

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -116,7 +116,7 @@
         </div>
       </div>
 
-      <section class="filter-country filter-country--closed page-main--nojs">
+      <section class="filter-country filter-country--opened filter-country--nojs">
         <div class="container">
           <div class="filter-country__top">
             <h2 class="filter-country__title">Фильтрация по странам:</h2>
@@ -822,8 +822,7 @@
         </div>
       </section>
 
-      <section>
-      </section>
+      
 
   
 
