--- a/source/catalog.html
+++ b/source/catalog.html
@@ -949,7 +949,6 @@
                       <span class="travel-modes__round"></span>
                       <svg class="travel-modes__img travel-modes__img--bike" width="19" height="17">
                         <use xlink:href="img/sprite.svg#icon-bike"></use>
-
                       </svg>
                       <span class="travel-modes__text">Велосипед</span>
                     </label>
@@ -1042,29 +1041,29 @@
                   </li>
                 </ul>
                 <p class="user-card__text">транспорт:</p>
-                <ul class="user-card__transport transport">
-                  <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--airplane" role="img" width="17" height="22">
+                <ul class="user-card__transport transport transport--catalog">
+                  <li class="transport__item transport__item--catalog transport__item--active">
+                      <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
                         <use xlink:href="img/sprite.svg#icon-plane"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--bus" role="img" width="20" height="20">
+                      <svg class="transport__icon transport__item--catalog transport__icon--bus" role="img" width="13" height="16">
                         <use xlink:href="img/sprite.svg#icon-bus"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--bicycle" role="img" width="20" height="24">
+                      <svg class="transport__icon transport__item--catalog transport__icon--bicycle" role="img" width="14" height="17">
                         <use xlink:href="img/sprite.svg#icon-bike"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--hiking" role="img" width="20" height="18">
+                      <svg class="transport__icon transport__item--catalog transport__icon--hiking" role="img" width="13" height="17">
                         <use xlink:href="img/sprite.svg#icon-run"></use>
                       </svg>
                   </li>
                 </ul>
-                <p class="user-card__text">левел:</p>
+                <p class="user-card__text user-card__text--level">левел:</p>
                 <div class="user-card__user-level user-level">
                   <span class="user-level__number">99</span>
                   <span class="user-level__text">level</span>
