Mob версия каталог

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1042,38 +1042,37 @@
                 </ul>
                 <p class="user-card__text">транспорт:</p>
                 <ul class="user-card__transport transport transport--catalog">
-                  <li class="transport__item transport__item--catalog transport__item--active">
+                  <li class="transport__item transport__item--active">
                       <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
                         <use xlink:href="img/sprite.svg#icon-plane"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__item--catalog transport__icon--bus" role="img" width="13" height="16">
+                      <svg class="transport__icon transport__icon--bus" role="img" width="13" height="16">
                         <use xlink:href="img/sprite.svg#icon-bus"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__item--catalog transport__icon--bicycle" role="img" width="14" height="17">
+                      <svg class="transport__icon transport__icon--bicycle" role="img" width="14" height="17">
                         <use xlink:href="img/sprite.svg#icon-bike"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__item--catalog transport__icon--hiking" role="img" width="13" height="17">
+                      <svg class="transport__icon transport__icon--hiking" role="img" width="13" height="17">
                         <use xlink:href="img/sprite.svg#icon-run"></use>
                       </svg>
                   </li>
                 </ul>
                 <p class="user-card__text user-card__text--level">левел:</p>
-                <div class="user-card__user-level user-level">
+                <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">99</span>
-                  <span class="user-level__text">level</span>
                 </div>
-                <a class="user-card__button button" href="#">Позвать</a>
+                <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
   
               <li class="user-card__item">
                 <h3 class="user-card__title">
-                  <a class="user-card__profile-link user-card__profile-link--ready" href="user-Demin-Petya.html">Петя Демин</a>
+                  <a class="user-card__profile-link user-card__profile-link--busy" href="user-Demin-Petya.html">Петя Демин</a>
                 </h3>
                 <div class="user-card__wrapper">
                   <picture>
@@ -1095,38 +1094,41 @@
                 </ul>
                 <p class="user-card__text">хочет посетить:</p>
                 <ul class="user-card__route route">
-                  <li class="route__item route__item--belgium">Бельгия</li>
-                  <li class="route__item route__item--czech">Чехия</li>
+                  <li class="route__item route__item--belgium">
+                    <p class="route__country">Бельгия</p>
+                  </li>
+                  <li class="route__item route__item--czech">
+                    <p class="route__country">Чехия</p>
+                  </li>
                 </ul>
                 <p class="user-card__text">транспорт:</p>
-                <ul class="user-card__transport transport">
+                <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--airplane" role="img" width="17" height="22">
-                        <use xlink:href="img/sprite.svg#icon-plane"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
+                      <use xlink:href="img/sprite.svg#icon-plane"></use>
+                    </svg>
                   </li>
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--bus" role="img" width="20" height="20">
-                        <use xlink:href="img/sprite.svg#icon-bus"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--bus" role="img" width="13" height="16">
+                      <use xlink:href="img/sprite.svg#icon-bus"></use>
+                    </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--bicycle" role="img" width="20" height="24">
-                        <use xlink:href="img/sprite.svg#icon-bike"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--bicycle" role="img" width="14" height="17">
+                      <use xlink:href="img/sprite.svg#icon-bike"></use>
+                    </svg>
                   </li>
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--hiking" role="img" width="20" height="18">
-                        <use xlink:href="img/sprite.svg#icon-run"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--hiking" role="img" width="13" height="17">
+                      <use xlink:href="img/sprite.svg#icon-run"></use>
+                    </svg>
                   </li>
                 </ul>
-                <p class="user-card__text">левел:</p>
-                <div class="user-card__user-level user-level">
+                <p class="user-card__text user-card__text--level">левел:</p>
+                <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">80</span>
-                  <span class="user-level__text">level</span>
                 </div>
-                <a class="user-card__button button" href="#">Позвать</a>
+                <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
 
               <li class="user-card__item">
@@ -1143,7 +1145,7 @@
                     <img class="user-card__image" src="img/smolov-mobile@1x.jpg" srcset="img/smolov-mobile@2x.jpg" alt="Марк Смолов">
                   </picture>
                 </div>
-                <p class="user-card__likes">1700</p>
+                <p class="user-card__likes">170</p>
                 <ul class="user-card__tags tags">
                   <li class="tags__item">#рэп</li>
                   <li class="tags__item">#тату</li>
@@ -1153,39 +1155,44 @@
                 </ul>
                 <p class="user-card__text">хочет посетить:</p>
                 <ul class="user-card__route route">
-                  <li class="route__item route__item--usa">США</li>
-                  <li class="route__item route__item--australia">Австралия</li>
-                  <li class="route__item route__item--dominican">Доминикана</li>
+                  <li class="route__item route__item--usa">
+                    <p class="route__country">США</p>
+                  </li>
+                  <li class="route__item route__item--australia">
+                    <p class="route__country">Австралия</p>
+                    </li>
+                  <li class="route__item route__item--dominican">
+                    <p class="route__country">Доминикана</p>
+                  </li>
                 </ul>
                 <p class="user-card__text">транспорт:</p>
-                <ul class="user-card__transport transport">
+                <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--airplane" role="img" width="17" height="22">
-                        <use xlink:href="img/sprite.svg#icon-plane"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
+                      <use xlink:href="img/sprite.svg#icon-plane"></use>
+                    </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--bus" role="img" width="20" height="20">
-                        <use xlink:href="img/sprite.svg#icon-bus"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--bus" role="img" width="13" height="16">
+                      <use xlink:href="img/sprite.svg#icon-bus"></use>
+                    </svg>
                   </li>
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--bicycle" role="img" width="20" height="24">
-                        <use xlink:href="img/sprite.svg#icon-bike"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--bicycle" role="img" width="14" height="17">
+                      <use xlink:href="img/sprite.svg#icon-bike"></use>
+                    </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--hiking" role="img" width="20" height="18">
-                        <use xlink:href="img/sprite.svg#icon-run"></use>
-                      </svg>
+                    <svg class="transport__icon transport__icon--hiking" role="img" width="13" height="17">
+                      <use xlink:href="img/sprite.svg#icon-run"></use>
+                    </svg>
                   </li>
                 </ul>
-                <p class="user-card__text">левел:</p>
-                <div class="user-card__user-level user-level">
+                <p class="user-card__text user-card__text--level">левел:</p>
+                <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">25</span>
-                  <span class="user-level__text">level</span>
                 </div>
-                <a class="user-card__button button" href="#">Позвать</a>
+                <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
 
               <li class="user-card__item">
@@ -1211,38 +1218,41 @@
                 </ul>
                 <p class="user-card__text">хочет посетить:</p>
                 <ul class="user-card__route route">
-                  <li class="traveller__country-item traveller__country-item--britain">Великобритания</li>
-                  <li class="traveller__country-item traveller__country-item--germany">Германия</li>
+                  <li class="route__item route__item--britain">
+                    <p class="route__country">Великобритания</p>
+                  </li>
+                  <li class="route__item route__item--germany">
+                    <p class="route__country">Германия</p>
+                    </li>
                 </ul>
                 <p class="user-card__text">транспорт:</p>
-                <ul class="user-card__transport transport">
+                <ul class="user-card__transport transport transport--catalog">
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--airplane" role="img" width="17" height="22">
+                      <svg class="transport__icon transport__icon--airplane" role="img" width="12" height="14">
                         <use xlink:href="img/sprite.svg#icon-plane"></use>
                       </svg>
                   </li>
                   <li class="transport__item transport__item--active">
-                      <svg class="transport__icon transport__icon--bus" role="img" width="20" height="20">
+                      <svg class="transport__icon transport__icon--bus" role="img" width="13" height="16">
                         <use xlink:href="img/sprite.svg#icon-bus"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--bicycle" role="img" width="20" height="24">
+                      <svg class="transport__icon transport__icon--bicycle" role="img" width="14" height="17">
                         <use xlink:href="img/sprite.svg#icon-bike"></use>
                       </svg>
                   </li>
                   <li class="transport__item">
-                      <svg class="transport__icon transport__icon--hiking" role="img" width="20" height="18">
+                      <svg class="transport__icon transport__icon--hiking" role="img" width="13" height="17">
                         <use xlink:href="img/sprite.svg#icon-run"></use>
                       </svg>
                   </li>
                 </ul>
-                <p class="user-card__text">левел:</p>
-                <div class="user-card__user-level user-level">
+                <p class="user-card__text user-card__text--level">левел:</p>
+                <div class="user-card__user-level user-level user-level--catalog">
                   <span class="user-level__number">50</span>
-                  <span class="user-level__text">level</span>
                 </div>
-                <a class="user-card__button button" href="#">Позвать</a>
+                <a class="user-card__button button button--catalog" href="#">Позвать!</a>
               </li>
             </ul>
 
